1-terraform-jenkins-server-ec2/route.tf
# # Internet Gateway
# resource "aws_internet_gateway" "my-igw" {
#   vpc_id = aws_vpc.my-vpc.id
#   tags = {
#     Name = "${var.env_prefix}-igw"
#   }
# }
# # Default Route Table
# resource "aws_default_route_table" "my-route-table" {
#   default_route_table_id = aws_vpc.my-vpc.default_route_table_id
#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.my-igw.id
#   }
#   tags = {
#     Name = "${var.env_prefix}-route-table"
#   }
# }
