1-terraform-jenkins-server-ec2/vpc.tf
# resource "aws_vpc" "my-vpc" {
#   cidr_block = var.vpc_cidr_block
#   tags = {
#     Name = "${var.env_prefix}-vpc"
#   }
# }

# resource "aws_subnet" "jenkins-subnet-1" {
#   vpc_id            = aws_vpc.my-vpc.id
#   cidr_block        = var.subnet_cidr_block
#   availability_zone = var.avail_zone
#   map_public_ip_on_launch = true
#   tags = {
#     Name = "${var.env_prefix}-subnet-1"
#   }
# }
